force-app/main/default/objects/Account/fields/Acc_Dunkin__c.field-meta.xml
<CustomField>
    <fullName>Acc_Dunkin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acc Dunkin</label>
    <type>Checkbox</type>
</CustomField>