force-app/main/default/objects/Account/fields/Acc_Test__c.field-meta.xml
<CustomField>
    <fullName>Acc_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acc Test</label>
    <type>Checkbox</type>
</CustomField>