force-app/main/default/objects/Account/fields/Test_Acc__c.field-meta.xml
<CustomField>
    <fullName>Test_Acc__c</fullName>
    <label>Test Acc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>